# student_lz78

./: CMakeLists.txt  README.md  checksum_md5.c  compressor.c  compressor.h  crc32.c  decompressor.c  decompressor.h  encode.c  encode.h  file_io.c  file_io.h  hash_table.c  hash_table.h  lz_command.c  lzw_codec.c  makefile
